:Contact: docutils-develop@lists.sourceforge.net
:Date: $Date$
:Revision: $Revision$
:Web site: http://docutils.sourceforge.net/
:Copyright: This document has been placed in the public domain.

.. contents::

2019-07-23 : Branch: branches/rel-0.15 created to investigate import problems: bugs#366

Changes Since 0.16
==================

* General

  - Explicit include test subdirectory contents in MANIFEST.in to avoid
    inclusion of test outputs.
  - Fix [ 385 ]: Import of language modules.
  - Use importlib.import_module() to programmatically import modules.

* docutils/__init__.py

  - VersionInfo: ValueError for invalid values, fix comparison to tuples.

* docutils/utils/smartquotes.py

  - Fix [ 383 ]: Smart quotes around opening and separator characters.
  
* docutils/writers/html5_polyglot/

  - Use the new semantic tags <main>, <section>, <header>,
    <footer>, <aside>, <figure>, and <figcaption>.
    See ``minimal.css`` and ``plain.css`` for styling rule examples.

  - Use HTML text-level tags <small>, <s>, <q>, <dfn>, <var>, <samp>, <kbd>,
    <i>, <b>, <u>, <mark>, and <bdi> if a matching class value
    is found in `inline` and `literal` elements.

  - Use HTML tags <ins> and <del> if a matching class value
    is found in `inline`, `literal`, or `container` elements.

* docutils/writers/latex2e/__init__.py:

  - Use LaTeX environments for admonitions and "class wrappers" for styling
    admonitions and titles if the new configuration setting
    `legacy_class_functions`_ is False.

  - Remove backwards compatibility code for the deprecated
    `styling command`__ prefix ``\docutilsrole``.
    
    __ docs/user/latex.html#classes


Release 0.16
============

* General

  - Dropped support for Python 2.6, 3.3 and 3.4
  - Docutils now supports Python 2.7 and Python 3.5+ natively
    (without conversion by ``2to3``).
  - Keep `backslash escapes`__ in the document tree. Backslash characters in